# JOJIAI-memory

./: .flake8  CHANGELOG_STAGE2.md  DEPLOY.md  Dockerfile  OPERATIONS.md  README.md  SECURITY.md  chat_memory.py  memory_agent.py  memory_decisions_v2.json  memory_logs_v2.json  memory_profile_v2.json  memory_projects_v2.json  pyproject.toml  requirements-dev.txt  requirements.txt  session_buffer.md  setup.py
.github/release_drafts/: stage2.md
.github/workflows/: ci.yml
config/: joji_frank_mode.json
docs/: FRANK_MODE_README.md
memory/: memory_dialogues_v2.json
prompts/: frank_mode++.txt
src/jojiai/: __init__.py  backup.py  chat_memory.py  core.py  exceptions.py  file_lock.py  memory_agent.py  memoryctl.py  monitoring.py  utils.py  validation.py  wal.py
src/jojiai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jojiai/frank_mode/: __init__.py  feature_flags.py  formatter.py  frank_metrics.py  lexical_filter.py  policy_router.py  refusal_templates.py
tests/: __init__.py  conftest.py  test_chat_memory.py  test_file_lock.py  test_frank_mode_core.py  test_frank_mode_integration.py  test_memory_agent.py  test_monitoring.py  test_validation.py  test_wal.py
